--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "voci-nel-muro",
+  "name": "VociNelMuro1",
   "version": "1.0.0",
+  "lockfileVersion": 3,
+  "requires": true,
   "description": "Gioco browser di messaggi anonimi",
   "main": "server.js",
+  "packages": {},
   "scripts": {
     "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.13.0"
   }
 }
